fixed z-index for map to be under nav and positioned loading icon more to left for centered appearance

--- a/app/assets/stylesheets/partials/_map.scss
+++ b/app/assets/stylesheets/partials/_map.scss
@@ -22,6 +22,7 @@
 .result-website {}
 
 .map-container {
+    z-index: -1;
     @include bp(mobile) {
         width: 90%;
         height: 150px;
@@ -49,7 +50,7 @@
 .loading {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     margin: -40px 0 0 -40px;
     height: 50px;
     width: 50px;
